--- a/index.html
+++ b/index.html
@@ -20,20 +20,46 @@
 			};
 			firebase.initializeApp(config);
 		</script>
-		<script type="text/javascript" src = "./main.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/4.3.1/firebase-database.js"></script>
 	</head>
 	<body>
 		<header>
 			<div class = "logo">
-				<h1>Book In Short</h1>
+				<h1>Book In Short</h1></br>
+				<center><input type="button" name="button" class="button" value="LOGOUT" id="lo" onclick="signOut()" style="display: none;"/></center>
 			</div>
 		</header></br>
 		<section>
-			<div class = "mainInfo">
+			<div class = "mainInfo" id = "mi">
 				<div class = "textArea">
 					<h3><b>Book In Short is a small project started by Mihir and Dhanesh. This app is for book lovers, who don't have enough time to read entire book. Basic purpose of this app is to provide gist of any book available, to read in short time.</b></h3>
 				</div>
 				<input type="button" name="login" onclick="signIn()" value="LOGIN" class="button" />
+			</div>
+
+			<div class="mainInfo" id = "form" style="width: 70%; overflow: scroll; display: none;">
+				<form id = "morf">
+					<label for="lang">Choose Language</label>
+					<select name = "lang" id = "lang">
+						<option value="English" selected>English</option>
+						<option value="Marathi">Marathi</option>
+					</select>
+					<label for="genre">Choose Genre</label>
+					<select name = "genre" id = "genre">
+						<option value="Sci-fi" selected>Sci-fi</option>
+						<option value="Novel">Novel</option>
+						<option value="Poem">Poem</option>
+					</select>
+					<label for="bookImage">Upload Image</label>
+					<input type="file" name="image" id = "bookImage" accept="image/*">
+
+					<input type="text" id = "bookName" name="bookName" placeholder="Enter book name"/>
+					<input type="text" id = "authorName" name="authorName" placeholder="Enter author name"/>
+					<input type="text" id = "decription" name="decription" placeholder="Enter description"/>
+					<input type="number" id = "tc" name="tabCount" placeholder="Enter tab count" onfocus="displayAlert()"/>
+					<a href="javascript:void(0);" onclick="addTabs()">Add tabs</a>
+					<div id = "mp"></div>
+				</form>
 			</div>
 		</section></br></br>
 		<footer>
@@ -41,5 +67,6 @@
 				<p class = "content">Copyright &copy; 2017 mkdkpro</p>
 			</div>
 		</footer>
+		<script type="text/javascript" src = "./main.js"></script>
 	</body>
 </html>
